forgivable hover dropdown and js to prevent dropdown going off-screen

--- a/resources/css/header.scss
+++ b/resources/css/header.scss
@@ -7,7 +7,6 @@ $primary-color: #ab0c2f;
   z-index: 2;
   background: $primary-color;
   cursor: pointer;
-  outline: none;
   box-shadow: none;
   color: white;
   &:after {
@@ -38,6 +37,7 @@ header {
   text-decoration: none;
   border-radius: 0;
   &:focus {
+    z-index: 999;
     top: 10px;
     left: 10px;
     border-radius: 0 !important;
@@ -94,6 +94,7 @@ ul.primary-navigation li.menu-item {
       @include menu-active();
     }
   }
+
   &:hover,
   &:focus-within {
     & > a {
@@ -112,6 +113,8 @@ ul.primary-navigation li.menu-item > a {
   padding: 1rem;
   color: black;
   text-decoration: none;
+  outline: none;
+  box-shadow: none;
 }
 
 ul.primary-navigation li.menu-item.menu-item-has-children {
